--- a/app/src/main/res/layout/view_repo_list.xml
+++ b/app/src/main/res/layout/view_repo_list.xml
@@ -15,6 +15,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:layout_marginEnd="8dp"
         android:gravity="start"
         android:maxLines="1"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
@@ -28,7 +29,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:layout_marginEnd="8dp"
         android:gravity="start"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_repo_name"
@@ -41,9 +44,9 @@
         android:layout_gravity="center_vertical"
         android:drawableStart="@drawable/github_fork"
         android:gravity="end"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_repo_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="parent"
         tools:text="10" />
 
     <TextView
@@ -53,6 +56,7 @@
         android:layout_gravity="center_vertical"
         android:drawableStart="@drawable/github_star"
         android:gravity="end"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/tv_forks"
